--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "osmosis": "^1.1.10"
   },
-  "scripts":{
-      "start": "node https-express-server.js"
+  "scripts": {
+    "start": "node https-express-server.js"
   }
 }
